--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./theme.scss";
+@import './theme.scss';
 
 body {
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
 }
 
 @mixin nav-link-active($color) {
-    .mat-list-base .mat-list-item.nav-link-active .mat-icon-no-color,
-    .nav-link-active, .nav-link-active .mat-icon {
-      color: $color !important;
-    }
+  .mat-list-base .mat-list-item.nav-link-active .mat-icon-no-color,
+  .nav-link-active,
+  .nav-link-active .mat-icon {
+    color: $color !important;
+  }
 }
 
 @include nav-link-active(var(--primary-darker-color));
